added image upload and fixed chat

--- a/Back end/gametrack/src/main/resources/application.properties
+++ b/Back end/gametrack/src/main/resources/application.properties
@@ -7,5 +7,9 @@ spring.datasource.password = root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 # Hibernate ddl auto (options: create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
-bezkoder.app.jwtSecret= bezKoderSecretKey
-bezkoder.app.jwtExpirationMs= 86400000
+secretKey= supersecretkey123
+expirationTime= 10000000
+
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
